# Inference

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: inference.cpp  inference_inspect.cpp  run_checkpoint.cpp
docs/: architecture.md  artifact-contract.md  decoder-runtime-design.md  migration-from-transformers.md  model-builder.md  runtime-runner.md
include/inference/: model_builder.hpp  transformer_core.hpp
include/inference/artifacts/npz/: state_dict_loader.hpp  transformer_loader.hpp  transformer_weights.hpp
include/inference/core/: artifact.hpp  status.hpp
include/inference/model_builder/: model_builder.hpp
include/inference/models/: encoder_classifier.hpp  vision_detector.hpp
include/inference/runtime/: model_adapter.hpp  model_runner.hpp  null_model_adapter.hpp  request.hpp  response.hpp  session.hpp
include/inference/tokenization/: tokenizer.hpp  tokenizer_factory.hpp  whitespace_tokenizer.hpp
include/inference/transformer_core/: common.hpp  tensor.hpp  text.hpp  vision.hpp
src/artifacts/npz/: state_dict_loader.cpp  transformer_loader.cpp
src/core/: artifact.cpp  status.cpp
src/model_builder/: model_builder.cpp
src/models/: encoder_classifier.cpp  vision_detector.cpp
src/runtime/: model_runner.cpp  null_model_adapter.cpp  session.cpp
src/tokenization/: tokenizer_factory.cpp  whitespace_tokenizer.cpp
src/transformer_core/: common.cpp  detail.hpp  text.cpp  vision.cpp
tests/: artifact_bundle_smoke_test.cpp  encoder_e2e_test.cpp  imdb_encoder_classifier_e2e_test.cpp  model_builder_smoke_test.cpp  model_runner_smoke_test.cpp  session_smoke_test.cpp  state_dict_loader_smoke_test.cpp  transformer_core_regression_test.cpp  transformer_core_smoke_test.cpp  vision_detector_e2e_test.cpp  vision_pipeline_test.cpp
tools/: import_pytorch_checkpoint.py  run_detection_checkpoint.py
